--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vant": "^2.8.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^2.2.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
